--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<version>6.4.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+
 
 	</dependencies>
 
